fixed testimonial avatar size on mobile version

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -52,6 +52,9 @@
     transform: translate(-50%, -50%);
     z-index: 2;
 
+    width: 110px;
+    height: 110px;
+
     @include on-small-screen {
       width: 140px;
       height: 140px
